--- a/WEEK 1/PYTHON MODULES/Python_Modules.ipynb
+++ b/WEEK 1/PYTHON MODULES/Python_Modules.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/saptarshi-2910/LS-ML/blob/main/WEEK%201/PYTHON%20MODULES/Python_Modules.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -31,7 +42,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MM8X0T-p06HB",
-        "outputId": "4ce53ab5-16ec-4ae1-9a5b-032eb9571f88"
+        "outputId": "a5141ce1-c288-477f-fe22-8a7af7315988"
       },
       "outputs": [
         {
@@ -86,7 +97,7 @@
       ],
       "metadata": {
         "id": "KNTXZFd13rgE",
-        "outputId": "86a12fde-61b3-4327-b53f-8df875afc6da",
+        "outputId": "7a20f1df-7825-4dca-f5fb-997851870f2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -160,7 +171,7 @@
       ],
       "metadata": {
         "id": "EaoIVtKIFenB",
-        "outputId": "dbf8cc62-7767-4fbb-9b30-f5eb98e6ab74",
+        "outputId": "5433e5a2-5652-47ed-835d-4463c5fec7e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -275,7 +286,7 @@
           "height": 1000
         },
         "id": "i4lccqVxcgE_",
-        "outputId": "100067a3-fa3c-447f-c9a8-2d3e6149f1c9"
+        "outputId": "211c82fa-cdf4-4038-b8ff-c0618c4b73e9"
       },
       "execution_count": 4,
       "outputs": [
@@ -380,7 +391,7 @@
       ],
       "metadata": {
         "id": "a_bTz2PlgRah",
-        "outputId": "1ce765e6-7e6c-4393-f21d-0b441a75907a",
+        "outputId": "d19383d5-8ca6-46c9-aa63-b8931f0de3ac",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
